--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@ function connect(host) {
 
 .btn { border-radius: 24px;
     border: 2px solid #005f7d;
+	border-style: outset;
     color: #000;
 }
 </style>
@@ -241,10 +242,18 @@ function connect(host) {
 	<div class="col col-xs-2"><button type="button" class="btn btn-warning btn-block btn-lg" id="btnDown" style="height:100%; width:100%;">RIGHT</button></div>
   </div>
 
-<div class="row row-xs-3">
-	<div class="col col-xs-12" style="background: #000">RPOWER Logo.... Did you know... Empty space, fill it with something.</div>
-	</div>
-	<div class="row row-xs-5 no-gutter">
+<div class="row row-xs-1 no-gutter">
+		<div class="col col-xs-12" style="background:#000;"></div>
+</div>
+
+<div class="row row-xs-2 no-gutter">
+		<div class="col col-xs-12" style="border: 4px solid;"><img src="images/rpowerlogo.jpg" style="height: 100%;"></div>
+</div>
+
+<div class="row row-xs-1 no-gutter">
+		<div class="col col-xs-12"></div>
+</div>
+	<div class="row row-xs-4 no-gutter">
     <div class="col col-xs-3"><button type="button" class="btn btn-success btn-block btn-lg" id="btnBump" style="height:100%; width:100%;">BUMP</button></div>
     <div class="col col-xs-3"><button type="button" class="btn btn-danger btn-block btn-lg" id="btnRecall" style="height:100%; width:100%;">RECALL</button></div>
     <div class="col col-xs-3" id="divSum"><button type="button" class="btn btn-warning btn-block btn-lg" id="btnSum" style="height:100%; width:100%;">SUM</button></div>
